Done frontend fixes on RB:- 1. Decreased the row height of RB result table 2. Fixed the font sizes of table headers on different screen sizes so that the table heading doesn't collapse to 2 lines upto medium screen

--- a/src/assets/css/calculator.css
+++ b/src/assets/css/calculator.css
@@ -741,7 +741,7 @@ table.index-strategy-table tbody tr {
 table.index-strategy-table tbody td {
     border-right: 1px solid #dfdfdf;
     border-bottom: 1px solid #dfdfdf;
-    padding: 8px 5px;
+    padding: 6px 5px;
     background-color: #f9fcff;
     color: #000;
     text-align: center;
