--- a/src/assets/css/retirement-buffer/style.css
+++ b/src/assets/css/retirement-buffer/style.css
@@ -893,7 +893,7 @@ table.retirement_table_area tr td {
     display: table-cell;
     border-right: 1px solid #dfdfdf;
     border-bottom: 1px solid #dfdfdf;
-    padding: 10px 6px;
+    padding: 6px;
     color: #000;
     font-size: 15px;
     font-weight: 500;
@@ -1556,15 +1556,53 @@ canvas#retirementBufferGraph {
 .retirement_table_area tbody tr td:first-child{
     border-left: 0 !important;
 }
-@media (max-width: 1419px) {
+@media (min-width: 1355px) and (max-width: 1467px) {
+    .retirement_table_area thead th p{
+        font-size: 14px;
+    }
+    .right-area.wider .retirement_table_area th p{
+        font-size: 15px;
+    }
+}
+@media (min-width: 1200px) and (max-width: 1403px) {
+    .retirement_table_area thead th p{
+        font-size: 13px;
+    }
+    .right-area.wider .retirement_table_area th p{
+        font-size: 15px;
+    }
+}
+@media (min-width: 1169px) and (max-width: 1231px) {
+    .right-area.wider .retirement_table_area th p{
+        font-size: 14px;
+    }
+}
+@media (max-width: 1168px) {
+    .right-area.wider .retirement_table_area th p{
+        font-size: 13px;
+    }
+}
+
+@media (max-width: 1342px) {
     .table_graph_tab_main table.retirement_table_area thead tr th{
-    height: 71px;
-    vertical-align: bottom;
+        height: 64px;
+        vertical-align: bottom;
+    }
+    .right-area.wider .table_graph_tab_main table.retirement_table_area thead tr th{
+        height: 52px;
     }
     .each_table_heading{
         font-size: 13px;
     }
     .filter_buttons button{
         height: 29px;
+    }
+}
+@media (max-width: 1200px) {
+    .right-area.wider .table_graph_tab_main table.retirement_table_area thead tr th{
+        height: 64px;
+    }
+    .retirement_table_area thead th p{
+        font-size: 13px;
     }
 }
